--- a/src/Mvc/Dinamico/Dinamico/Themes/Roadwork/Content/Layout.css
+++ b/src/Mvc/Dinamico/Dinamico/Themes/Roadwork/Content/Layout.css
@@ -2,13 +2,13 @@
 
 	div#wrapper { width:auto; margin:0; }
 		div#top { position:relative; padding:5px; }
-			div#top ul { display:block; width:960px; margin:0 auto; text-align:right; }
+			div#top ul { float:left; margin-left:50%; }
+			div#top ul li { }
 		div#header { width:auto; margin:0; padding-top:30px; }
 			div#nav { width:960px; margin:0 auto; }
 				div#nav ul li { vertical-align:top; }
 				div#nav ul.topmenu li.home a { position:static; padding:10px; }
 					div#nav ul.topmenu a.logotype img { height:24px; }
-				div#nav ul.submenu { margin-top:-1px; }
 			div#main { width:960px; margin:0 auto; }
 		div#page { padding-top:30px; }
 			div#footer div.inner { width:960px; margin:0 auto; }
